[ios] Fixes toolbar buttons disappearing when switching BVC modes.

When switching between incognito and non-incognito BVCs, it is possible
for all of the toolbar's buttons to be temporarily hidden.  We believe
that this results in the stack view having zero width, which seems to
permanently break autolayout on iOS 10.  Adding an optional width
constraint seems to work around this issue.

BUG=851954

Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I6995f2b3f5fa3b0f2eafb09e3970001fd16720f6
Reviewed-on: https://chromium-review.googlesource.com/1097207
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Stepan Khapugin <stkhapugin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566759}
Former-commit-id: 8b0446e6d03446934b11236a768082bad8968814